--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,6 @@
   margin:0px ;
   padding: 0px;
   box-sizing: border-box;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   font-family: 'Solway', serif;
 }
